# ToonPrompt

./: CHANGELOG.md  README.md
docs/: agent-runtime-architecture.md  agent-system-prototype.md  asset-library.md  openclaw-plugin.md  production-agents.md  shot-compile.md
examples/zhaozhouqiao-2d-adaptation/: README.md  adaptation_notes.md  art_package.md  producer_log.md  production_todo.md  project-state.yaml  shot-render-requests.json  storyboard.json
examples/zhaozhouqiao-2d-adaptation/assets/character/chaiwangye/: meta.yaml
examples/zhaozhouqiao-2d-adaptation/assets/character/luban/: meta.yaml
examples/zhaozhouqiao-2d-adaptation/assets/character/zhangguolao/: meta.yaml
examples/zhaozhouqiao-2d-adaptation/scripts/: build_demo.py
runtime/: README.md  pyproject.toml
runtime/video_agents/: __init__.py  export_schemas.py  schemas.py  state.py
skills/character-prompt-engine/: SKILL.md
skills/screenplay-development/: SKILL.md
skills/screenplay-development/agents/: openai.yaml
skills/screenplay-development/references/: commercial-evaluation.md  development-frameworks.md  logline-and-save-the-cat.md  screenplay-creation.md
skills/video-agent-orchestration/: SKILL.md
skills/video-agent-orchestration/agents/: openai.yaml
skills/video-agent-orchestration/references/: handoff-rules.md  pipeline-files.md
tests/: test_assets.py  test_segment.py
