[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "slate-video-agents"
version = "0.1.0"
description = "Stateful video agent orchestration runtime for Slate"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
  "langgraph",
  "pydantic>=2",
  "typing-extensions>=4.12",
]

[project.scripts]
slate-export-schemas = "video_agents.export_schemas:main"

[tool.setuptools.packages.find]
where = ["."]
include = ["video_agents*"]
