[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "slate-video-agents"
version = "0.3.0"
description = "Slate v0.3 OpenClaw runtime for producer-led video-agent orchestration"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
  "langgraph",
  "pydantic>=2",
  "pyyaml>=6",
  "typing-extensions>=4.12",
]

[project.scripts]
slate-export-schemas = "video_agents.export_schemas:main"

[tool.setuptools.packages.find]
where = ["."]
include = ["video_agents*"]
